# drm_test

./: .gitignore  CMakeLists.txt  drm_display.c  drm_display.h  main.c  test
cmake/: aarch64-rk3568-toolchain.cmake
docs/: drm_display_guide.md
